--- a/bootstrap/overrides/overrides.yaml
+++ b/bootstrap/overrides/overrides.yaml
@@ -1,22 +1,8 @@
 
-global:
-  extraEnv:
-    # PROXY (recomendado en MAYÚSCULAS)
-    - name: HTTP_PROXY
-      value: "http://proxy-gamp-hybrid-d2vpp.internet-dev.ec1.aws.aztec.cloud.allianz:8080"
-    - name: HTTPS_PROXY
-      value: "http://proxy-gamp-hybrid-d2vpp.internet-dev.ec1.aws.aztec.cloud.allianz:8080"
-    - name: NO_PROXY
-      value: "localhost,127.0.0.1,.svc,.cluster.local,kubernetes.default,kubernetes.default.svc,kubernetes.default.svc.cluster.local,apis.allianz,.argocd.svc,argocd-server,argocd-repo-server,argocd-dex-server,argocd-redis,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16"
- 
-    # (Opcional) también en minúsculas por compatibilidad con algunas imágenes
-
-    - name: http_proxy
-      value: "http://proxy-gamp-hybrid-d2vpp.internet-dev.ec1.aws.aztec.cloud.allianz:8080"
-    - name: https_proxy
-      value: "http://proxy-gamp-hybrid-d2vpp.internet-dev.ec1.aws.aztec.cloud.allianz:8080"
-    - name: no_proxy
-      value: "localhost,127.0.0.1,.svc,.cluster.local,kubernetes.default,kubernetes.default.svc,kubernetes.default.svc.cluster.local,apis.allianz,.argocd.svc,argocd-server,argocd-repo-server,argocd-dex-server,argocd-redis,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16"
+httpProxy:
+  scheme: HTTP
+  host: proxy-gamp-hybrid-d2vpp.internet-dev.ec1.aws.aztec.cloud.allianz
+  port: 8080
  
 instanceID: apigee-nonprod-eks
 namespace: apigee
