--- a/bootstrap/overrides/overrides.yaml
+++ b/bootstrap/overrides/overrides.yaml
@@ -3,6 +3,7 @@ httpProxy:
   scheme: HTTP
   host: proxy-gamp-hybrid-d2vpp.internet-dev.ec1.aws.aztec.cloud.allianz
   port: 8080
+  useForRuntimeManagement: true
  #aa
 instanceID: apigee-nonprod-eks
 namespace: apigee
